--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,14 @@ dependencies:
   cupertino_icons: ^0.1.3
   flutter_screenutil: ^2.3.1
   firebase_admob: ^0.9.3+4
+  firebase_core: ^0.4.5
+  cloud_firestore: ^0.13.7
+  device_info: ^0.4.2+7
+  provider: ^4.3.2+1
+  skeleton_text: ^1.0.0
+  pimp_my_button: ^1.0.0
+  get: ^3.5.1
+  lottie: ^0.6.0
 
 dev_dependencies:
   flutter_test:
@@ -47,9 +55,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/lottie/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
